--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -13,6 +15,13 @@
     <select name="pokemon" id="pokemon">
         <option value="">Elige un pokemon</option>
     </select>
+    <section id="pokeImage">
+        <section class="card shadow col-12 col-md-6 col-lg-3 m-5" id="img_container">
+            <section class="card-body" id="text_container">
+                <h2 class="text-center">Nombre Estático</h2>
+            </section>
+        </section>
+    </section>
 </body>
 <script src="js/main.js" type="text/javascript"></script>
 </html>
