Añade función para mostrar nombre

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <select name="pokemon" id="pokemon">
         <option value="">Elige un pokemon</option>
     </select>
-    <section id="pokeImage">
-        <section class="card shadow col-12 col-md-6 col-lg-3 m-5" id="img_container">
-            <section class="card-body" id="text_container">
-                <h2 class="text-center">Nombre Estático</h2>
-            </section>
+    <section class="container p-4" id="pokeImage">
+        <section class="card shadow col-12 my-5" id="img_container">
+        </section>
+        <section class="card-body" id="text_container">
         </section>
     </section>
 </body>
