--- a/index.html
+++ b/index.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <title>Document</title>
-</head>
-<body>
-    <h1>PokeApi</h1>
-    <h3>Pokemons de la primera generación</h3>
-    <label for="pokemon">Elige un Pokemon</label>
-    <select name="pokemon" id="pokemon">
-        <option value="">Elige un pokemon</option>
-    </select>
-    <section class="container p-4" id="pokeImage">
-        <section class="card shadow col-12 my-5" id="img_container">
-        </section>
-        <section class="card-body" id="text_container">
-        </section>
-    </section>
+    <title>Pokemon</title>
+    <link rel="stylesheet" type="text/css" href="css/stylo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesone/5.10.2/css/all.min.css">
+    </head>
+    <body>
+    <div class="container">
+    <div class="header">
+        <h2>Crear cuenta</h2>
+    </div>
+    <form id="form" class="form">
+        <div class="form-control">
+            <label for="username">Usuario</label>
+            <input type="text" placeholder="Pokemaster" id="username" />
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>Error message</small>
+        </div>
+        <div class="form-control">
+            <label for="email">Email</label>
+            <input type="email" placeholder="pokemaster@gmail.com" id="email" />
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>Error message</small>
+        </div>
+        <div class="form-control">
+            <label for="password">Password</label>
+            <input type="password" placeholder="Password" id="password"/>
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>Error message</small>
+        </div>
+        <div class="form-control">
+            <label for="password2">Repetir password</label>
+            <input type="password" placeholder="Password dos" id="password2"/>
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>Error message</small>
+        </div>
+        <button>Submit</button>
+    </form>
 </body>
-<script src="js/main.js" type="text/javascript"></script>
+</div>
 </html>
+<script src="js/document.js"></script>
