--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>PokeApi</h1>
-    <h3>Pokemons de la primera generación</h3>
-    <label for="pokemon">Elige un Pokemon</label>
-    <select name="pokemon" id="pokemon">
-        <option value="">Elige un pokemon</option>
-    </select>
-    <section class="container p-4" id="pokeImage">
-        <section class="card shadow col-12 my-5" id="img_container">
+    <main class="container">
+        <h1>PokeApi</h1>
+        <h3>Pokemons de la primera generación</h3>
+        <label for="pokemon">Elige un Pokemon</label>
+        <select name="pokemon" id="pokemon">
+            <option value="">Elige un pokemon</option>
+        </select>
+        <section class="pokemon_container p-4" id="pokeImage">
+            <section class="card shadow col-12 my-5" id="img_container"></section> <!--Contiene las imágenes-->
+            <section class="card-body" id="text_container"></section> <!--Contiene los nombres-->
         </section>
-        <section class="card-body" id="text_container">
-        </section>
-    </section>
+        <button class="btn btn-primary" id="btn_add_favourites">Favoritos</button> <!--Botón de favoritos-->
+    </main>
 </body>
 <script src="js/main.js" type="text/javascript"></script>
 </html>
